--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -4,6 +4,8 @@
 .bb-comment .nameplate
 .comment-bilibili-fold .nameplate
 .replies-comment-input-wrapper .replies-upload .comment-input-img span
+.bb-comment .sailing
+.comment-bilibili-fold .sailing
 	display none
 
 .comment
