--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -246,6 +246,8 @@ button
 .wide-members .avatar-list i
 .is-web .submit-button.disabled
 .tag-channel-pane .channel-btns__link
+.bui-swiper-wrap .bui-swiper-next
+.bui-swiper-wrap .bui-swiper-pre
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
