--- a/weibo-lite/src/home/base.styl
+++ b/weibo-lite/src/home/base.styl
@@ -19,6 +19,7 @@
 #v6_pl_rightmod_helpcomment
 #v6_pl_ad_bigday
 #v6_pl_ad_forfqy
+#Pl_Discover_TextList__4
 #plc_bot .WB_footer
 #plc_bot .W_fold
 #WB_webchat
