--- a/weibo-lite/src/public/feed.styl
+++ b/weibo-lite/src/public/feed.styl
@@ -147,9 +147,8 @@ a em
   width 70%
 
   .WB_media_a
-    display flex
+    display flex !important
     flex-wrap wrap
-    justify-content space-between
     align-items center
     margin 0 0 0 10px
     width 100%
@@ -184,6 +183,5 @@ a em
   width 500px
 
 .WB_feed_v3 .WB_media_a_m1 .WB_video
-.WB_feed_v3 .WB_media_a_m1 .WB_video_a
   display block !important
   height 282px !important
