--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -67,7 +67,7 @@
 	width 100%
 
 .guochuang .r-con
-	width auto
+	width auto !important
 
 .focus-carousel
 .article-card .pic
@@ -90,7 +90,6 @@
 	max-height 200px
 
 #bili_anime .card-list .zone-list-box
-#bili_guochuang .card-list .zone-list-box
 	height 460px !important
 
 #bili_live .zone-list-box
@@ -127,7 +126,6 @@
 		max-height 180px
 
 	#bili_anime .card-list .zone-list-box
-	#bili_guochuang .card-list .zone-list-box
 		height 465px !important
 
 	#bili_live .zone-list-box
@@ -180,7 +178,6 @@
 		height 477px !important
 
 	#bili_anime .card-list .zone-list-box
-	#bili_guochuang .card-list .zone-list-box
 		max-height 400px
 
 	#bili_read .zone-list-box
@@ -210,7 +207,6 @@
 		height 380px !important
 
 	#bili_anime .card-list .zone-list-box
-	#bili_guochuang .card-list .zone-list-box
 		max-height 350px
 
 	#bili_manga .manga-panel .manga-list-box
