--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -28,6 +28,9 @@
 .bili-radio+span:before
   background-color var(--c-hover) !important
 
+.bui-switch .bui-switch-body
+  background-color var(--c-border) !important
+
 .el-date-table td.disabled div
 .el-year-table td.disabled .cell
 .el-month-table td.disabled .cell
@@ -41,6 +44,7 @@
 .user-setting-warp .el-radio-button__orig-radio:checked+.el-radio-button__inner
 .bcc-checkbox-checked .bcc-checkbox-checkbox
 .bili-radio:checked+span:after
+.bui-switch .bui-switch-input:checked+.bui-switch-label .bui-switch-body
   background-color var(--c-accent) !important
 
 .date-picker-v2-container div
@@ -109,6 +113,12 @@ select
 
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span
   border none !important
+
+.bui-switch .bui-switch-dot
+  fill var(--c-border) !important
+
+.bui-switch .bui-switch-input:checked+.bui-switch-label .bui-switch-body .bui-switch-dot
+  fill var(--c-accent) !important
 
 /* 弹窗 */
 .area-selector
