--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -183,6 +183,9 @@
   .bili-radio+span:before {
     background-color: var(--c-hover) !important;
   }
+  .bui-switch .bui-switch-body {
+    background-color: var(--c-border) !important;
+  }
   .el-date-table td.disabled div,
   .el-year-table td.disabled .cell,
   .el-month-table td.disabled .cell,
@@ -195,7 +198,8 @@
   .el-radio-button.is-active .el-radio-button__inner,
   .user-setting-warp .el-radio-button__orig-radio:checked+.el-radio-button__inner,
   .bcc-checkbox-checked .bcc-checkbox-checkbox,
-  .bili-radio:checked+span:after {
+  .bili-radio:checked+span:after,
+  .bui-switch .bui-switch-input:checked+.bui-switch-label .bui-switch-body {
     background-color: var(--c-accent) !important;
   }
   .date-picker-v2-container div,
@@ -264,6 +268,12 @@
   }
   .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span {
     border: none !important;
+  }
+  .bui-switch .bui-switch-dot {
+    fill: var(--c-border) !important;
+  }
+  .bui-switch .bui-switch-input:checked+.bui-switch-label .bui-switch-body .bui-switch-dot {
+    fill: var(--c-accent) !important;
   }
   .area-selector,
   .area-panel,
@@ -3388,7 +3398,7 @@
     width: 100%;
   }
   .guochuang .r-con {
-    width: auto;
+    width: auto !important;
   }
   .focus-carousel,
   .article-card .pic {
@@ -3410,8 +3420,7 @@
   #bili_guochuang .time-line .zone-list-box {
     max-height: 200px;
   }
-  #bili_anime .card-list .zone-list-box,
-  #bili_guochuang .card-list .zone-list-box {
+  #bili_anime .card-list .zone-list-box {
     height: 460px !important;
   }
   #bili_live .zone-list-box {
@@ -3447,8 +3456,7 @@
     #bili_guochuang .time-line .zone-list-box {
       max-height: 180px;
     }
-    #bili_anime .card-list .zone-list-box,
-    #bili_guochuang .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box {
       height: 465px !important;
     }
     #bili_live .zone-list-box {
@@ -3501,8 +3509,7 @@
     #bili_live .zone-list-box {
       height: 477px !important;
     }
-    #bili_anime .card-list .zone-list-box,
-    #bili_guochuang .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box {
       max-height: 400px;
     }
     #bili_read .zone-list-box {
@@ -3532,8 +3539,7 @@
     #bili_live .zone-list-box {
       height: 380px !important;
     }
-    #bili_anime .card-list .zone-list-box,
-    #bili_guochuang .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box {
       max-height: 350px;
     }
     #bili_manga .manga-panel .manga-list-box {
