--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -256,6 +256,7 @@
 	border-color var(--c-border) !important
 
 .van-popper-favorite .tab-item--active
+.header-video-card:hover
 	background-color var(--c-hover) !important
 
 .van-popper-favorite .tab-item--normal:hover
