--- a/bilibili-lite/src/manga/header.styl
+++ b/bilibili-lite/src/manga/header.styl
@@ -3,6 +3,7 @@
 .manga-logo
 .user-info-panel a .tooltip
 .nav-list a:last-child
+.download-app
   display none !important
 
 .manga-navbar .manga-navbar
