--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -240,6 +240,7 @@ button
 .watch-later-list header .d-btn
 .cinema-movie-wrapper .slider-contro span
 .bcc-pagination-item
+.bcc-pagination-ellipsis
 .h .h-message
 .container .musician-recommend .recommend-item .recommend-info .listen-btn
 .follow-container .follow-right .unfollow-btn
