--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -7,6 +7,7 @@
 .newbie-awarder .award-dialog .award-dialog-container
 .hot-category
 .section-navigator
+.overlay .guide-attention .welfare-box
   background-color var(--c-background) !important
 
 .vertical-block-card
@@ -17,6 +18,7 @@
 .manga-title
 .standby-panel .content-container .panel-title
 .style-section .tag-block .block-title
+.overlay .guide-attention .welfare-box .welfare-title
   color var(--c-title) !important
 
 .manga-card-vertical .text-info-section .supporting-text
@@ -24,6 +26,7 @@
 .meta-info p
 .standby-panel .content-container .support-text
 .style-section .tag-block .tag-containers .style-tag
+.overlay .guide-attention .welfare-box .welfare-info
   color var(--c-text) !important
 
 .size-ruler .style-section .tag-block .tag-containers .style-tag.selected
