--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -21,6 +21,8 @@
 .bb-comment .comment-list .list-item .con .vote-container .image-area .share-img
 .comment-bilibili-fold .comment-list .list-item .con .vote-container .image-area .share-img
 .bb-comment .comment-list .list-item .con .vote-container
+.bb-comment .comment-list .list-item .info .reply-tags span
+.comment-bilibili-fold .comment-list .list-item .info .reply-tags span
 	background-color var(--c-hover)
 
 #comment
