--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -35,6 +35,7 @@
 	margin-top 100px !important
 
 .side-bar .item a:hover
+.list-item .name
 	color var(--c-title) !important
 
 .list-item .last-word
@@ -45,6 +46,7 @@
 	color var(--c-accent) !important
 
 .card
+.bili-im
 	margin-bottom 0 !important
 	box-shadow none !important
 	background-color var(--c-background) !important
@@ -56,6 +58,7 @@
 .title
 .divider
 .orginal-reply
+.bili-im .left
 	border-color var(--c-border) !important
 
 .action-menu .menu-list:before
